--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,9 @@ title                    : "Black at Mila"
 title_separator          : "-"
 name                     : &name "Black at Mila"
 description              : &description "A community dedicated to supporting and celebrating Black researchers, students, and professionals at Mila - Quebec AI Institute"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
-                                                           # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : "" # Leave empty for relative URLs, or set to your GitHub Pages URL
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "" # Update with your GitHub repository (e.g., "username/repo-name")
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
